--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--GOOGLE FONT LINK-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+    <!--BOOTSTRAP LINK-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+    <!--CUSTOM CSS LINK-->
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Ecommerce site</title>
 </head>
@@ -12,14 +22,25 @@
     <header>
         <ul class="nav__bar1">
             <div>
-                <li class="nav__items">Store Direction</li>
-                <li class="nav__items">Order Tracking</li>
+                <li class="nav__items"><ion-icon name="location-outline" class=nav__icons--1></ion-icon>Store Direction</li>
+                <li class="nav__items"><ion-icon name="share-outline" class=nav__icons--2></ion-icon>Order Tracking</li>
             </div>
             <div>
-                <li class="nav__items">English</li>
-                <li class="nav__items">USD</li>
+                <li class="nav__items nav__items--english">English<ion-icon name="chevron-down-outline" class=nav__icons--3></ion-icon></li>
+                <li class="nav__items nav__items--USD">USD<ion-icon name="chevron-down-outline" class=nav__icons--4></ion-icon></li>
+
+                <li class="nav__items--custom nav__items--lang">Italiano</li>
+                <li class="nav__items--custom nav__items--currency">EUR</li>
+                
             </div>
         </ul>
     </header>
+
+    <!--BOOTSTRAP JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    
+    <!--ION ICONS LINK-->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
